--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
+<title>HUNGY: Search</title>
+	<head>Search Page</head>
+		<body>
+		    <h1>Welcome!</h1>
+		    <p>This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. </p>
+		</body>
 </html>
