05/08/2019 added templates, routes, functions, etc

--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -2,26 +2,75 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-  Recipe_info
+    Hungy - Recipe Info
 {% endblock %}
 
 {% block content %}
-<div class="container">
-
-  <h1>Recipes <br><small>Here is the recipes that best fits what you have</small></h1>
-
-  {% if data %}
-    {% for i in data %} <!-- getting all 'keys' from the json object -->
-      <br>
-      <h3>{{i['title']}}</h3> <!-- getting the 'value' of the 'key' 'title' from the json object -->
-      <div><img src="{{i['image']}}" alt="" width="300"  class="img-rounded"></div>
-      <div><small>instructions: {{i['instructions']}}</small></div>
-      <p></p></a>
-      <br><br>
-    {% endfor %}
-  {% else %}
-    no data
-  {% endif %}
-
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Hungy - Add Recipe</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
+    <body>
+        <!-------Header Section---------->
+        <header>
+            <!--Navigation bar-->
+            <div class="nav-bar">
+                <nav class="navbar navbar-expand-lg">
+                <!-----MANGLER LOGO--->
+                  <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <i class="fa fa-bars"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav ml-auto">
+                          <li class="nav-item">
+                            <a class="nav-link" href="/home">HOME </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/search">SEARCH</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/addrecipe">ADD A RECIPES</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/login">LOGIN/CREATE ACCOUNT</a>
+                          </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="/login">YOUR RECIPES</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#skills">FAQ</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#contact">CONTACT</a>
+                            </li>
+                        </ul>
+                  </div>
+                </nav>
+            </div>
+        </header>
+        <div class="container">
+            <h1>Recipes <br><small>Here is the recipes that best fits what you have</small></h1>
+            <!-- PRINTS RECIPE INFORMATION -->
+            {% if data %}
+                <h3>{{ data['title'] }}</h3>
+                <p></p>
+                <div><img src="{{data['image']}}" alt="" width="300" class="img-rounded"></div>
+                <div><small>Instructions: {{data['instructions']}}</small></div>
+                <p></p>
+                <br><br>
+            {% else %}
+                no data
+            {% endif %}
+        </div>
+    </body>
+</html>
 {% endblock %}
