--- a/templates/search.html
+++ b/templates/search.html
@@ -4,6 +4,6 @@
 	<head>Search Page</head>
 		<body>
 		    <h1>Welcome!</h1>
-		    <p>This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. This is my template. </p>
+		    <p>The way you can search is very simple. If you want to  </p>
 		</body>
 </html>
