FAQ html, changing the template

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FAQ</title>
+    <title>FAQ + Contact</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -44,8 +44,32 @@
         </nav>
       </div>
       <div class="container">
+        <h1>Welcome! Have some questions?</h1>
+          <p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 
+        <h3>Do I have to create an account?</h3>
+          <p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
+        <h3>Can I save my favorite recipes?</h3>
+              <p> Yes, if you want to save your favorite recipes you need to create an account.</p>
+
+        <h3>How can I save a recipe? </h3>
+          <p>Simply click on the save button. Next time you log in you will be able to access all the recipes.</p>
+
+        <h3> Can I add my own recipes? </h3>
+          <p> Yes, only users who have an account can add their own recipes. </p>
+
+        <h3>  </h3>
+
+        <h3> </h3>
+
+        <h1 class= "underline bold">Contact us:</h1>
+        <ul>
+          <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
+          <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
+          <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
+          <li><b>Magnus Harboe:</b> mharboe@csumb.edu</li>
+        </ul>
       </div>
     </section>
   </body>
