--- a/templates/faq.html
+++ b/templates/faq.html
@@ -59,10 +59,11 @@
         <h3> Can I add my own recipes? </h3>
           <p> Yes, only users who have an account can add their own recipes. </p>
 
-        <h3>  </h3>
+          <h3> Can I organize my saved recipes by category? </h3>
+          <p> No, all your saved recipes will displayed in a single list </p>
 
-        <h3> </h3>
-
+          <h3> Can I search recipes by name? (ex: lasagna, chicken, ) </h3>
+           <p> Yes, if you choose to search by name you will get multiple results that match your request.</p>
         <h1 class= "underline bold">Contact us:</h1>
         <ul>
           <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
