--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,8 +44,13 @@
         </nav>
       </div>
       <div class="container">
-
-
+        <h1 class= "underline bold">Contact us:</h1>
+        <ul>
+          <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
+          <li><b>Andrew Marmolejo:</b> amarmolejo@csumb.edu</li>
+          <li><b>Guadalupe Cisneros:</b> gcisneros@csumb.edu</li>
+          <li><b>Magnus Harboe:</b> mharboe@csumb.edu</li>
+        </ul>
       </div>
     </section>
   </body>
