--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="container welcome">
 			    <h1>HUNGY?</h1>
-				<a href="/recipes" class="btn btn1"><i class="fa fa-search"></i> Search</a>
+				<a href="/search" class="btn btn1"><i class="fa fa-search"></i> Search</a>
 			    <a href="/contact" class="btn btn2">Contact</a>
 			</div>
 		</header>
