--- a/templates/faq.html
+++ b/templates/faq.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="/faq">FAQ</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/contract">CONTACT</a>
+              <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
