--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,7 +43,7 @@
           </div>
         </nav>
       </div>
-      <div class="container">
+      <div class="container welcome">
         <h1 class= "underline bold">Contact us:</h1>
         <ul>
           <li><b>Athena Enosara:</b> aenosara@csumb.edu</li>
