--- a/templates/faq.html
+++ b/templates/faq.html
@@ -43,7 +43,7 @@
           </div>
         </nav>
       </div>
-      <div class="container welcome">
+      <div class="container hungy_subpage">
         <h1>Welcome! Have some questions?</h1>
           <p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
 
