--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,10 @@
 			    <a href="/contact" class="btn btn2">Contact</a>
 			</div>
 		</header>
+		<!-------TRUE FALSE IF ACCOUNT CREATED OR NOT---------->
+		{% if account_created == True%}
+			<h1>Account Was Created!</h1>
+		{% endif %}
 	</body>
 </html>
 
