--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -31,7 +31,7 @@
                   	<div class="collapse navbar-collapse" id="navbarNav">
                     	<ul class="navbar-nav ml-auto">
                         	<li class="nav-item">
-                         		<a class="nav-link" href="/home">HOME </a>
+                         		<a class="nav-link" href="/">HOME </a>
                         	</li>
                         	<li class="nav-item">
                         		<a class="nav-link" href="/search">SEARCH</a>
@@ -46,10 +46,10 @@
                           		<a class="nav-link" href="/login">YOUR RECIPES</a>
                           	</li>
                           	<li class="nav-item">
-                          		<a class="nav-link" href="#skills">FAQ</a>
+                          		<a class="nav-link" href="/faq">FAQ</a>
                           	</li>
                           	<li class="nav-item">
-                          		<a class="nav-link" href="#contact">CONTACT</a>
+                          		<a class="nav-link" href="/contact">CONTACT</a>
                           	</li>
                        	</ul>
                   </div>
