--- a/templates/yourrecipes.html
+++ b/templates/yourrecipes.html
@@ -46,10 +46,10 @@
                               <a class="nav-link" href="/login">YOUR RECIPES</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#skills">FAQ</a>
+                              <a class="nav-link" href="/faq">FAQ</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#contact">CONTACT</a>
+                              <a class="nav-link" href="/contact">CONTACT</a>
                             </li>
                         </ul>
                     </div>
