--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/recipes/2/2">SEARCH</a>
+              <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
               <a class="nav-link" href="/add">ADD</a>
