--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -28,10 +28,10 @@
               <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/recipes/2/2">SEARCH</a>
+              <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="">ADD</a>
+              <a class="nav-link" href="/login">ADD</a>
               </li>
               <li class="nav-item">
               <a class="nav-link" href="/faq">FAQ</a>
