--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="/recipes">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="">ADD</a>
+              <a class="nav-link" href="/login">ADD</a>
               </li>
               <li class="nav-item">
               <a class="nav-link" href="/faq">FAQ</a>
