--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,10 @@
+<!-- index.html -->
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+	Hungy - Home
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -28,7 +35,7 @@
 								<a class="nav-link" href="/">HOME </a>
 								</li>
 								<li class="nav-item">
-								<a class="nav-link" href="/recipes">SEARCH</a>
+								<a class="nav-link" href="/search">SEARCH</a>
 								</li>
 								<li class="nav-item">
 								<a class="nav-link" href="/add">ADD</a>
