--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -10,7 +10,7 @@
   	<head>
         <meta charset="utf-8">
         <title>Hungy - Add Recipe</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -40,11 +40,8 @@
                         		<a class="nav-link" href="/addrecipe">ADD A RECIPES</a>
                         	</li>
                         	<li class="nav-item">
-                        		<a class="nav-link" href="/login">LOGIN/CREATE ACCOUNT</a>
+                        		<a class="nav-link" href="/login">ACCOUNT</a>
                         	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/login">YOUR RECIPES</a>
-                          	</li>
                           	<li class="nav-item">
                           		<a class="nav-link" href="/faq">FAQ</a>
                           	</li>
@@ -52,7 +49,7 @@
                           		<a class="nav-link" href="/contact">CONTACT</a>
                           	</li>
                        	</ul>
-                  </div>
+                	</div>
               	</nav>
           	</div>
       	</header>
