--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -37,7 +37,7 @@
                         		<a class="nav-link" href="/search">SEARCH</a>
                         	</li>
                         	<li class="nav-item">
-                        		<a class="nav-link" href="/addrecipe">ADD A RECIPES</a>
+                        		<a class="nav-link" href="/addrecipe">ADD</a>
                         	</li>
                         	<li class="nav-item">
                         		<a class="nav-link" href="/login">ACCOUNT</a>
