--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,19 +25,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link" href="/">HOME </a>
+                <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/recipes">SEARCH</a>
+                <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/login">ADD</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/faq">FAQ</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/contract">CONTACT</a>
+                <a class="nav-link" href="/faq">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
