--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,9 +1,14 @@
 <!-- contact.html -->
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+	Hungy - FAQ + Contact
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FAQ + Contact</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -25,19 +30,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link" href="/">HOME </a>
+                <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/search">SEARCH</a>
+                <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/login">ADD</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/faq">FAQ</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+                <a class="nav-link" href="/faq">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -75,3 +83,4 @@
     </section>
   </body>
 </html>
+{% endblock %}
