--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,4 +1,10 @@
-<!-- reipies.html -->
+<!-- recipes.html -->
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+	Hungy - Recipes
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -68,3 +74,4 @@
     </section>
   </body>
 </html>
+{% endblock %}
