--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -1,4 +1,10 @@
-<!-- reipies_info.html -->
+<!-- recipes_info.html -->
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+	Hungy - Recipe Info
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -25,19 +31,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-              <a class="nav-link" href="/">HOME </a>
+                <a class="nav-link" href="/">HOME </a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/search">SEARCH</a>
+                <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/add">ADD</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/faq">FAQ</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+                <a class="nav-link" href="/faq">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -60,6 +69,6 @@
     </section>
   </body>
 </html>
-
+{% endblock %}
 
 
