--- a/templates/search.html
+++ b/templates/search.html
@@ -11,7 +11,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -29,31 +29,28 @@
                 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     	<i class="fa fa-bars"></i>
                   	</button>
-                  	<div class="collapse navbar-collapse" id="navbarNav">
-                    	<ul class="navbar-nav ml-auto">
-                        	<li class="nav-item">
-                        		<a class="nav-link" href="/">HOME </a>
-                        	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/search">SEARCH</a>
-                          	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/addrecipe">ADD A RECIPES</a>
-                          	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/login">LOGIN/CREATE ACCOUNT</a>
-                          	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/login">YOUR RECIPES</a>
-                          	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/faq">FAQ</a>
-                          	</li>
-                          	<li class="nav-item">
-                          		<a class="nav-link" href="/contact">CONTACT</a>
-                          	</li>
-                      	</ul>
-                  	</div>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="/">HOME </a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/search">SEARCH</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/addrecipe">ADD</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/login">ACCOUNT</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/faq">FAQ</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/contact">CONTACT</a>
+					</li>
+				</ul>
+			</div>
               	</nav>
           	</div>
       	</header>
