--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,10 @@
 <!-- contact.html -->
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+  Hungy - Contact
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -58,3 +64,4 @@
     </section>
   </body>
 </html>
+{% endblock %}
