--- a/templates/index.html
+++ b/templates/index.html
@@ -31,21 +31,24 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
-								<li class="nav-item">
-								<a class="nav-link" href="/">HOME </a>
-								</li>
-								<li class="nav-item">
-								<a class="nav-link" href="/search">SEARCH</a>
-								</li>
-								<li class="nav-item">
-								<a class="nav-link" href="/add">ADD</a>
-								</li>
-								<li class="nav-item">
-								<a class="nav-link" href="/faq">FAQ</a>
-								</li>
-								<li class="nav-item">
-								<a class="nav-link" href="/contact">CONTACT</a>
-								</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/">HOME </a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/search">SEARCH</a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/add">ADD</a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/login">ACCOUNT</a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/faq">FAQ</a>
+							</li>
+							<li class="nav-item">
+							<a class="nav-link" href="/contact">CONTACT</a>
+							</li>
 						</ul>
 					</div>
 				</nav>
