--- a/templates/search.html
+++ b/templates/search.html
@@ -20,7 +20,7 @@
   	</head>
   	<body>
     	<!-------Header Section---------->
-        <header>
+        <section>
           	<!--Navigation bar-->
 	        <div class="nav-bar">
 	            <nav class="navbar navbar-expand-lg">
@@ -53,23 +53,23 @@
 			</div>
               	</nav>
           	</div>
-      	</header>
-		<center>
-			<div class="search">
-				<!-- INPUT FOR SEARCH API -->
-				<form action="" method="post">
-					{{ search_api_form.csrf_token }}
-					{{ search_api_form.hidden_tag() }}
-					<p>
-						{{ search_api_form.search_ingredients.label }} <br> {{ search_api_form.search_ingredients(size=32) }}
-					</p>
-					<p>
-						{{ search_api_form.search_type.label }} <br> {{ search_api_form.search_type(size=2) }}
-					</p>
-					<p>{{ search_api_form.submit() }}</p>
-				</form>
-			</div>
-		</center>
+      	</section>
+	<center>
+		<div class="search">
+			<!-- INPUT FOR SEARCH API -->
+			<form action="" method="post">
+				{{ search_api_form.csrf_token }}
+				{{ search_api_form.hidden_tag() }}
+				<p>
+					{{ search_api_form.search_ingredients.label }} <br> {{ search_api_form.search_ingredients(size=32) }}
+				</p>
+				<p>
+					{{ search_api_form.search_type.label }} <br> {{ search_api_form.search_type(size=2) }}
+				</p>
+				<p>{{ search_api_form.submit() }}</p>
+			</form>
+		</div>
+	</center>
   	</body>
 
 <title>HUNGY: Search</title>
