--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
   	</head>
 	<body>
     	<!-------Header Section---------->
-      	<header>
+      	<section>
           	<!--Navigation bar-->
           	<div class="nav-bar">
               	<nav class="navbar navbar-expand-lg">
@@ -51,27 +51,27 @@
 				</ul>
 			</div>
             	</nav>
-          	</div>
-      	</header>
-	<center>
-		<div class="login">
-			<!-- INPUT TO LOGIN -->
-			<form action="" method="post">
-				{{ login_account_form.csrf_token }}
-				{{ login_account_form.hidden_tag() }}
-				<p>
-					{{ login_account_form.user_id.label }} <br> {{ login_account_form.user_id(size=32) }}
-				</p>
-				<p>
-					{{ login_account_form.password.label }} <br> {{ login_account_form.password(size=32) }}
-				</p>
-				<p>
-					{{ login_account_form.create_login.label }} <br> {{ login_account_form.create_login(size=2) }}
-				</p>
-				<p>{{ login_account_form.submit() }}</p>
-			</form>
 		</div>
-	</center>
+		<center>
+			<div class="login">
+				<!-- INPUT TO LOGIN -->
+				<form action="" method="post">
+					{{ login_account_form.csrf_token }}
+					{{ login_account_form.hidden_tag() }}
+					<p>
+						{{ login_account_form.user_id.label }} <br> {{ login_account_form.user_id(size=32) }}
+					</p>
+					<p>
+						{{ login_account_form.password.label }} <br> {{ login_account_form.password(size=32) }}
+					</p>
+					<p>
+						{{ login_account_form.create_login.label }} <br> {{ login_account_form.create_login(size=2) }}
+					</p>
+					<p>{{ login_account_form.submit() }}</p>
+				</form>
+			</div>
+		</center>
+	</section>
     </body>
 </html>
 {% endblock %}
