--- a/templates/faq.html
+++ b/templates/faq.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body>
+  <body class = "hungy-sub">
     <section>
       <!--Navigation bar-->
       <div class="nav-bar">
@@ -51,10 +51,12 @@
           </div>
         </nav>
       </div>
-      <div class="container hungy_subpage">
-        <h1>Welcome! Have some questions?</h1>
-          <p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
-
+      <div class="container">
+	<div id="sub-header">
+          <h1>Welcome! Have some questions?</h1>
+             <p>Here is where the most frequently asked questions can be answered. If there is a question that you want to be answered, scroll to the very bottom and feel free to contact us for the answer!</p>
+	      </div>
+	      
         <h3>Do I have to create an account?</h3>
           <p> No, you do not need to create an account to use the app. However, you will need to make an account if you want to save any of the recipes.</p>
 
