--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 							<a class="nav-link" href="/search">SEARCH</a>
 							</li>
 							<li class="nav-item">
-							<a class="nav-link" href="/add">ADD</a>
+							<a class="nav-link" href="/addrecipe">ADD</a>
 							</li>
 							<li class="nav-item">
 							<a class="nav-link" href="/login">ACCOUNT</a>
