05/12/2019 - Added header comments & changed nav links.

--- a/templates/add.html
+++ b/templates/add.html
@@ -1,4 +1,17 @@
-<!-- contact.html -->
+<!--
+
+   File Name: add.html   
+   Template File: -
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 <!DOCTYPE html>
 <html>
   <head>
