--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,4 +1,19 @@
-<!-- addrecipe.html -->
+<!--
+
+   File Name: addrecipe.html   
+   Template File: 	This page will let the user 
+   					submit information to add a 
+   					new recipe to their account.  
+                                                                                              
+   Authors:	Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Add Recipe
@@ -37,10 +52,10 @@
 						<a class="nav-link" href="/search">SEARCH</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/addrecipe">ADD</a>
-					</li>
+                		<a class="nav-link" href="/login">ACCOUNT</a>
+              		</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/login">ACCOUNT</a>
+						<a class="nav-link" href="/addrecipe">ADD</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/faq">FAQ</a>
