--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,19 @@
-<!-- index.html -->
+<!--
+
+   File Name: index.html   
+   Template File:	This page is the home page. 
+   					It will display a button to 
+   					search and to the contact page. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Home
@@ -32,22 +47,22 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-							<a class="nav-link" href="/">HOME </a>
+								<a class="nav-link" href="/">HOME </a>
 							</li>
 							<li class="nav-item">
-							<a class="nav-link" href="/search">SEARCH</a>
+								<a class="nav-link" href="/search">SEARCH</a>
 							</li>
 							<li class="nav-item">
-							<a class="nav-link" href="/addrecipe">ADD</a>
+			                	<a class="nav-link" href="/login">ACCOUNT</a>
+			              	</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/addrecipe">ADD</a>
 							</li>
 							<li class="nav-item">
-							<a class="nav-link" href="/login">ACCOUNT</a>
+								<a class="nav-link" href="/faq">FAQ</a>
 							</li>
 							<li class="nav-item">
-							<a class="nav-link" href="/faq">FAQ</a>
-							</li>
-							<li class="nav-item">
-							<a class="nav-link" href="/contact">CONTACT</a>
+								<a class="nav-link" href="/contact">CONTACT</a>
 							</li>
 						</ul>
 					</div>
