--- a/templates/recipes_info.html
+++ b/templates/recipes_info.html
@@ -1,4 +1,19 @@
-<!-- recipes_info.html -->
+<!--
+
+   File Name: recipes_info.html   
+   Template File:   This page will display the 
+                    information of a selected 
+                    recipe. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Recipe Info
@@ -37,10 +52,10 @@
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/addrecipe">ADD</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">ACCOUNT</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
