--- a/templates/yourrecipes.html
+++ b/templates/yourrecipes.html
@@ -1,4 +1,18 @@
-<!-- yourrecipes.html -->
+<!--
+
+   File Name: yourrecipes.html   
+   Template File:   This page will display the
+                    recipes that the user added. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
   Hungy - Your Recipes
@@ -36,10 +50,10 @@
                           <a class="nav-link" href="/search">SEARCH</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="/addrecipe">ADD</a>
+                          <a class="nav-link" href="/login">ACCOUNT</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="/login">ACCOUNT</a>
+                          <a class="nav-link" href="/addrecipe">ADD</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="/faq">FAQ</a>
