--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,19 @@
-<!-- contact.html -->
+<!--
+
+   File Name: contact.html   
+   Template File:   This page will display the
+                    contact information of the 
+                    program's authors. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
   Hungy - Contact
@@ -37,10 +52,10 @@
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/addrecipe">ADD</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">ACCOUNT</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
