--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,4 +1,19 @@
-<!-- faq.html -->
+<!--
+
+   File Name: faq.html   
+   Template File:   This page will display frequently
+                    asked questions, & answers to 
+                    them. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - FAQ + Contact
@@ -36,10 +51,10 @@
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/addrecipe">ADD</a>
+                <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">ACCOUNT</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
