--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,19 @@
-<!-- login.html -->
+<!--
+
+   File Name: login.html   
+   Template File: 	This page will let the user
+   					log into their account or 
+   					create an account. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Login
@@ -37,10 +52,10 @@
 						<a class="nav-link" href="/search">SEARCH</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/addrecipe">ADD</a>
-					</li>
+                		<a class="nav-link" href="/login">ACCOUNT</a>
+              		</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/login">ACCOUNT</a>
+						<a class="nav-link" href="/addrecipe">ADD</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/faq">FAQ</a>
