--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,4 +1,18 @@
-<!-- recipes.html -->
+<!--
+
+   File Name: recipes.html   
+   Template File:   This page will display five 
+                    search results. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Recipes
@@ -37,10 +51,10 @@
                 <a class="nav-link" href="/search">SEARCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/addrecipe">ADD</a>
+                  <a class="nav-link" href="/login">ACCOUNT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">ACCOUNT</a>
+                <a class="nav-link" href="/addrecipe">ADD</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/faq">FAQ</a>
