--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,20 @@
-<!-- search.html -->
+<!--
+
+   File Name: search.html   
+   Template File: 	This page will let the user
+   					input search words and 
+   					selected a search method to 
+   					search the API. 
+                                                                                              
+   Authors: Andrew Marmolejo
+            Athena Enosara
+            Magnus Harboe
+            Guadalupe Cisneros
+
+   Date: May 13th, 2019                                                                 
+   Course: CST 205    
+
+-->
 {% extends 'bootstrap/base.html' %}
 {% block title %}
 	Hungy - Search
@@ -38,10 +54,10 @@
 						<a class="nav-link" href="/search">SEARCH</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/addrecipe">ADD</a>
-					</li>
+                          <a class="nav-link" href="/login">ACCOUNT</a>
+                    </li>
 					<li class="nav-item">
-						<a class="nav-link" href="/login">ACCOUNT</a>
+						<a class="nav-link" href="/addrecipe">ADD</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/faq">FAQ</a>
