--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -68,7 +68,7 @@
       </div>
       <div class="container">
 
-        <h1>Recipes <br><small>Here is the recipes that best fits what you have.</small></h1>
+        <h1>Recipe Results <br><small>Here is the recipes that best fits what you have.</small></h1>
 
         {% if data %}
           {% for recipe in data %} <!-- getting all 'keys' from the json object -->
